
## [1.8.14] – 2026-01-27
### Changed
- Auto-Update-Status im Kopfbereich zeigt nun getrennt den Stand für Findings- und Aspen-Datei an.
- Aspen-Datei wird jetzt wie das Aspen-Board automatisch geprüft und bei Änderungen neu geladen.

## [1.8.13] – 2026-01-27
### Added
- SRU-Exchange-Eingaben für "Exchange Input" und "Exchange Output" ergänzt, die bei SRU-Exchange-Status (inkl. Suffixe) angezeigt werden und als Keywords `{sn_in}` bzw. `{sn_out}` in Ausgaben genutzt werden können.
- SRU-Exchange-Keywords `{sn_in}` und `{sn_out}` werden nun auch innerhalb der einzelnen Finding-Texte ersetzt (leere Werte bleiben leer).

## [1.8.12] – 2026-01-26
### Fixed
- Statuswechsel in Findings-Eingaben speichern sofort, damit ein Umstellen nicht mehr auf den letzten Zustand zurückspringt.

## [1.8.11] – 2026-01-26
### Fixed
- Nonroutine-Ausgabefeld blendet sich jetzt sofort ein, sobald ein Finding mit Nonroutine-Status hinzugefügt wird.

## [1.8.10] – 2026-01-26
### Fixed
- Nonroutine-Ausgabefeld reagiert jetzt sofort auf Statuswechsel und blendet sich ohne Seitenreload ein oder aus.

## [1.8.9] – 2026-01-26
### Changed
- Nonroutine-Ausgabefeld wird automatisch ausgeblendet, wenn alle gewählten Findings den Status „Spare“ oder „SRU Exchange“ haben (auch wenn der Status nicht explizit gesetzt ist).

## [1.8.7] – 2026-01-23
### Changed
- Bearbeiten- und Löschen-Icons der Findings-Eingaben sind jetzt schlichter und einfarbig gestaltet.

## [1.8.6] – 2026-01-23
### Added
- Stift-Button für ausgewählte Findings, der den Findings-Editor mit vorausgewähltem Eintrag öffnet und Updates sofort in den Ausgaben übernimmt.

## [1.8.4] – 2026-01-23
### Fixed
- Bestellliste zeigt nur noch hinterlegte Teilenummern und blendet Geräte-Partnummern aus.
- Customfindings werden inklusive Bestellnummern und Texte in der PN/SN-History gespeichert und nach Reload wiederhergestellt.

## [1.8.3] – 2026-01-23
### Added
- Spare-Customfindings ergänzen das Keyword `{findings}` auch in der Routine-Ausgabe.
